# cursor-telemetry-blocker

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  cursor-private.sh  cursor_observe.py  cursor_telemetry_filter.py  cursor_telemetry_filter_deep.py  install.sh  pyproject.toml  setup-ca-cert.sh  setup-hosts.sh
Formula/: cursor-telemetry-blocker.rb
config/: default.toml  local.env.example  proxy.pac
proto/: aiserver_v1.proto
scripts/: analyze_all_pass.py  analyze_capture.py  cursor-blocker-service.sh  cursor-doctor.sh  cursor-private.sh  deep_filter_shim.py  generate-launcher.sh  setup-ca-cert.sh  setup-cursor-private-app.sh  setup-hosts.sh  setup-system-proxy.sh  sniff-all.py  sniff-payload.py
src/cursor_telemetry_blocker/: __main__.py  config.py  dashboard.py  dashboard.tcss  deep_filter.py  events.py  filter.py  observer.py  protobuf.py
