[project]
name = "cursor-telemetry-blocker"
version = "0.2.0"
description = "Local proxy to block Cursor IDE telemetry while preserving AI functionality"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "grpcio-tools>=1.78.0",
    "mitmproxy>=12.2.1",
    "protobuf>=6.33.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_telemetry_blocker"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
